@@ -21,6 +21,7 @@ import org.junit.runners.Suite;
 import org.junit.runners.model.InitializationError;
 import org.junit.runners.model.RunnerScheduler;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -61,8 +62,8 @@ public class DelegatingTestRunner extends Suite {
     Class<RunnerProvider> asType = (Class<RunnerProvider>) clazz;
     RunnerProvider instance;
     try {
-      instance = asType.newInstance();
-    } catch (InstantiationException | IllegalAccessException e) {
+      instance = asType.getDeclaredConstructor().newInstance();
+    } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
       throw new InitializationError(e);
     }
 
